--- a/compose.yaml
+++ b/compose.yaml
@@ -3,8 +3,13 @@ services:
   server:
     build:
       context: .
+    command: >
+      sh -c "poetry run python auto_migrate.py &&
+              poetry run uvicorn backend.main:app --host 0.0.0.0 --port 8000"
     ports:
       - 8000:8000
+    volumes:
+      - alembic_versions:/app/alembic/versions 
     networks:
       - credit_network
     depends_on:
@@ -16,13 +21,6 @@ services:
     user: postgres
     env_file:
       - .env
-    # secrets:
-    #   - db-password
-    # volumes:
-    #   - db-data:/var/lib/postgresql/data
-    # environment:
-    #   - POSTGRES_DB=example
-    #   - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
     expose:
       - 5432
     networks:
@@ -35,6 +33,7 @@ services:
 
 volumes:
   db-data:
+  alembic_versions:
 secrets:
   db-password:
     file: db/password.txt
