--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "uvicorn (>=0.34.0,<0.35.0)",
     "black (>=25.1.0,<26.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "alembic (>=1.15.1,<2.0.0)",
 ]
 
 
