--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,15 @@ dependencies = [
     "python-dotenv (>=1.0.1,<2.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "alembic (>=1.15.1,<2.0.0)",
+    "isort (>=6.0.1,<7.0.0)",
 ]
+
+
+[tool.isort]
+multi_line_output = 3
+force_grid_wrap = 0
+include_trailing_comma = true
+line_length = 88
 
 
 [build-system]
