--- a/compose.yaml
+++ b/compose.yaml
@@ -11,8 +11,8 @@ services:
       - 8000:8000
     volumes:
       - alembic_versions:/app/alembic/versions 
-    # networks:
-    #   - credit_network
+    networks:
+      - credit_network
     depends_on:
       db:
         condition: service_healthy
@@ -24,8 +24,8 @@ services:
       - .env
     expose:
       - 5432
-    # networks:
-    #   - credit_network
+    networks:
+      - credit_network
     healthcheck:
       test: [ "CMD", "pg_isready" ]
       interval: 10s
@@ -38,6 +38,6 @@ volumes:
 secrets:
   db-password:
     file: db/password.txt
-# networks:
-#   credit_network:
-#     driver: bridge
+networks:
+  credit_network:
+    driver: bridge
